# genetic-algorithm-optimization

./: .gitignore  CMakeLists.txt  License  Makefile  Readme.md
config/: parameters.txt
docs/: Additional Flags.txt
include/: Random.h  Timer.h  Utils.h  constants.h  functions.hpp
src/: Chromosome.cpp  Chromosome.h  FileLoader.cpp  FileLoader.h  Parameters.h  genetic_operators.cpp  genetic_operators.h  main.cpp
